openapi description for adding a section group controller
